# fmt-iter

./: .gitignore  Cargo.toml  README.md  lib.rs  test.rs
.github/workflows/: test.yaml
